--- a/package.json
+++ b/package.json
@@ -17,13 +17,17 @@
   },
   "devDependencies": {
     "@types/react": "^18.0.34",
-    "classnames": "^2.3.2",
     "jest": "^29.5.0",
     "typescript": "^5.0.4"
   },
   "peerDependencies": {
-    "classnames": "^2.2.6",
     "react": "^18.2.0"
   },
-  "sideEffects": false
+  "sideEffects": false,
+  "prettier": {
+    "semi": false,
+    "singleQuote": true,
+    "bracketSpacing": true,
+    "arrowParens": "avoid"
+  }
 }
